--- a/src/main/resource/application.properties
+++ b/src/main/resource/application.properties
@@ -1,5 +1,18 @@
-#扫描包的路径
+#包扫描路径
 scanPackage=com.test.demo
+
+#切面表达式，expression
+pointCut=public .* com.gupaoedu.vip.demo.service..*Service..*(.*)
+#切面类
+aspectClass=com.test.demo.aspect.LogAspect
+#切面前置通知
+aspectBefore=before
+#切面后置通知
+aspectAfter=after
+#切面异常通知
+aspectAfterThrow=afterThrowing
+#切面异常类型
+aspectAfterThrowingName=java.lang.Exception
 
 #html文件默认地址
 templateRoot=layouts
